--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: hannah's
 email: hui.liu803@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to Hannah's personal homepage.
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "/blog/" # the subpath of your site, e.g. /blog
 url: "https://www.hannah803.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hannah803
 github_username: hannah803
