--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ twitter_username: jekyllrb
 github_username: jekyll
 
 # Build settings
-#remote_theme: "jeffreytse/jekyll-theme-yat"
-theme: jekyll-theme-yat
+remote_theme: "jeffreytse/jekyll-theme-yat"
+#theme: jekyll-theme-yat
 plugins:
   - jekyll-feed
 # Exclude from processing.
