--- a/_config.yml
+++ b/_config.yml
@@ -1,70 +1,22 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# Setup
+title:               Lanyon
+tagline:             'A Jekyll theme'
+description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+url:                 http://lanyon.getpoole.com
+baseurl:             ''
+paginate:            5
+permalink:           pretty
 
-title: Hannah's
-email: hui.liu803@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Ideas, knowledge, and all the things worth remembering.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://hannah803.github.io/blog" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: hannah803
-github_username: hannah803
+# About/contact
+author:
+  name:              Mark Otto
+  url:               https://twitter.com/mdo
+  email:             markdotto@gmail.com
 
-defaults:
-  home:
-    heading: "Don't Squander Your Hours,  Ensure Idleness Finds No Refuge"
-    subheading: "人其实不会因为努力而痛苦，反倒会因为无所事事而焦虑"
-    banner: "https://bit.ly/3xTmdUP"
-
-header_pages: [blog/index.markdown, blog/archives.html]
-brand_color: "#4F4FD4"
-
-night_mode: "manual"
-sitemap: false
-theme_color: snowwhite
-# Build settings
-remote_theme: "jeffreytse/jekyll-theme-yat"
-#theme: jekyll-theme-yat
-
+# Gems
 plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
   - jekyll-paginate
-  - jekyll-spaceship
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+
+# Custom vars
+version:             1.1.0
+google_analytics_id: #UA-XXXX-Y
