--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Hannah
 tagline: "Hannah's Blog"
 description: "New Ideas Meet Talents."
-url: http://hannah803.github.io
+url: https://hannah803.github.io
 paginate: 5
 permalink: pretty
 
