--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: Hannah
-tagline: "Hannah's Blog"
+title: Hannah's
+tagline: "Blog"
 description: "New Ideas Meet Talents."
 url: https://hannah803.github.io
 paginate: 5
