--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-# Setup
 title: Hannah's
-tagline: "Blog"
+tagline: ""
 description: "New Ideas Meet Talents."
 url: https://hannah803.github.io
 paginate: 5
